09 docs: execution-service program — CHG-049..053 records, 08-compose + 09-swarm hardening, plans/audits, make test targets